--- a/game-list/package.json
+++ b/game-list/package.json
@@ -22,6 +22,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.10",
+    "dotenv": "^5.0.1",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
@@ -34,6 +35,7 @@
     "passport-local": "^1.0.0",
     "postcss-loader": "^2.1.1",
     "react": "^16.2.0",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
     "sass-loader": "^6.0.7",
