--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
+    "igdb-api-node": "^3.1.3",
     "isomorphic-fetch": "^2.2.1",
     "morgan": "^1.9.0",
     "mysql": "^2.15.0",
