--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "cors": "^2.8.4",
     "css-loader": "^0.28.10",
     "dotenv": "^5.0.1",
     "express": "^4.16.2",
