--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "file-loader": "^1.1.11",
     "igdb-api-node": "^3.1.3",
     "isomorphic-fetch": "^2.2.1",
+    "lodash": "^4.17.5",
     "morgan": "^1.9.0",
     "mysql": "^2.15.0",
     "node-sass": "^4.7.2",
