--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
+    "react-toggle-display": "^2.2.0",
     "sass-loader": "^6.0.7",
+    "socket.io": "^2.1.0",
     "style-loader": "^0.20.2",
     "uuid": "^3.2.1",
     "webpack": "^3.10.0"
