--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "body-parser": "^1.18.2",
+    "body-parser-xml": "^1.1.0",
     "cors": "^2.8.4",
     "css-loader": "^0.28.10",
     "dotenv": "^5.0.1",
-    "express": "^4.16.2",
+    "express": "^4.16.3",
+    "express-xml-bodyparser": "^0.3.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
     "igdb-api-node": "^3.1.3",
@@ -42,14 +45,17 @@
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
+    "request": "^2.85.0",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.2",
     "uuid": "^3.2.1",
-    "webpack": "^3.10.0"
+    "webpack": "^3.10.0",
+    "xml2json": "^0.11.2",
+    "zlib": "^1.0.5"
   },
   "devDependencies": {
     "concat-cli": "^4.0.0",
     "concurrently": "^3.5.1",
-    "nodemon": "^1.17.2"
+    "nodemon": "^1.17.3"
   }
 }
