--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "cors": "^2.8.4",
@@ -45,6 +46,7 @@
     "react-toggle-display": "^2.2.0",
     "sass-loader": "^6.0.7",
     "socket.io": "^2.1.0",
+    "socket.io-client": "^2.1.0",
     "style-loader": "^0.20.2",
     "uuid": "^3.2.1",
     "webpack": "^3.10.0"
