--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
+    "react-particles-js": "^2.1.2",
     "react-router-dom": "^4.2.2",
     "react-spinners": "^0.3.2",
     "react-toggle-display": "^2.2.0",
