--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "sass-loader": "^6.0.7",
     "socket.io": "^2.1.0",
     "socket.io-client": "^2.1.0",
+    "sql-template-strings": "^2.2.2",
     "style-loader": "^0.20.2",
     "uuid": "^3.2.1",
     "webpack": "^3.10.0",
