--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-dom": "^16.2.0",
     "react-particles-js": "^2.1.2",
     "react-router-dom": "^4.2.2",
+    "react-scroll": "^1.7.8",
     "react-spinners": "^0.3.2",
     "react-toggle-display": "^2.2.0",
     "request": "^2.85.0",
